<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.apache.ws</groupId>
    <artifactId>wsif</artifactId>
    <version>0.20260921</version>
    <packaging>bundle</packaging>

    <name>WSIF</name>
    <description>Web Services Invocation Framework</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <!--
            soaprmi.* and xpp are intentionally absent: the SoapRMI provider is the
            only code that referenced them and it is not built (see the
            maven-compiler-plugin excludes below).
        -->
        <osgi.imported.packages>org.apache.soap.*;resolution:=optional,org.apache.axis.*;resolution:=optional,javax.xml.rpc.*;resolution:=optional,javax.ejb.*;resolution:=optional,*</osgi.imported.packages>
    </properties>

    <dependencies>
        <!-- WSDL4J -->
        <dependency>
            <groupId>wsdl4j</groupId>
            <artifactId>wsdl4j</artifactId>
            <version>1.6.3</version>
        </dependency>

        <!-- Apache Axis -->
        <dependency>
            <groupId>org.apache.axis</groupId>
            <artifactId>axis</artifactId>
            <version>1.4</version>
        </dependency>

        <dependency>
            <groupId>org.apache.axis</groupId>
            <artifactId>axis-jaxrpc</artifactId>
            <version>1.4</version>
        </dependency>

        <dependency>
            <groupId>org.apache.axis</groupId>
            <artifactId>axis-saaj</artifactId>
            <version>1.4</version>
        </dependency>

        <!-- Commons Logging -->
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.3.5</version>
        </dependency>

        <dependency>
            <groupId>commons-discovery</groupId>
            <artifactId>commons-discovery</artifactId>
            <version>0.5</version>
        </dependency>

        <!-- XML Parser -->
        <dependency>
            <groupId>xerces</groupId>
            <artifactId>xercesImpl</artifactId>
            <version>2.12.2</version>
        </dependency>

        <dependency>
            <groupId>xml-apis</groupId>
            <artifactId>xml-apis</artifactId>
            <version>1.4.01</version>
        </dependency>

        <!--
            reload4j is the maintained, binary-compatible drop-in replacement for
            log4j 1.2.17, which reached EOL in 2015 and carries 6 unfixable CVEs
            (CVE-2019-17571, CVE-2021-4104, CVE-2022-23302, CVE-2022-23305,
            CVE-2022-23307, CVE-2023-26464).
            WSIF itself never references org.apache.log4j; this artifact only
            provides the logging backend that commons-logging discovers
            reflectively on behalf of Apache Axis, so the swap is behaviour-neutral.
        -->
        <dependency>
            <groupId>ch.qos.reload4j</groupId>
            <artifactId>reload4j</artifactId>
            <version>1.2.26</version>
        </dependency>

        <!--
            Java EE APIs.
            The Apache Geronimo spec jars are retired (Geronimo was archived in 2021).
            They are replaced by the official Jakarta EE 8 API artifacts, which
            deliberately still use the javax.* namespace - required here because
            Apache Axis 1.4 / JAX-RPC has no Jakarta EE 9+ successor.
        -->
        <dependency>
            <groupId>jakarta.jms</groupId>
            <artifactId>jakarta.jms-api</artifactId>
            <version>2.0.3</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>jakarta.ejb</groupId>
            <artifactId>jakarta.ejb-api</artifactId>
            <version>3.2.6</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>jakarta.resource</groupId>
            <artifactId>jakarta.resource-api</artifactId>
            <version>1.7.4</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.sun.activation</groupId>
            <artifactId>javax.activation</artifactId>
            <version>1.2.0</version>
        </dependency>

        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>javax.mail</artifactId>
            <version>1.6.2</version>
            <exclusions>
                <!--
                    javax.mail pulls in the legacy javax.activation:activation:1.1,
                    which ships the same javax.activation packages as the newer
                    com.sun.activation:javax.activation:1.2.0 declared above.
                    Excluded to avoid a duplicate/split package on the classpath.
                -->
                <exclusion>
                    <groupId>javax.activation</groupId>
                    <artifactId>activation</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!--
            Supplies javax.rmi.PortableRemoteObject, which was removed from the JDK
            in Java 11 together with the CORBA modules (JEP 320).
            Required by the EJB provider (WSIFPort_EJB).
        -->
        <dependency>
            <groupId>org.jboss.spec.javax.rmi</groupId>
            <artifactId>jboss-rmi-api_1.0_spec</artifactId>
            <version>1.0.6.Final</version>
            <scope>provided</scope>
        </dependency>

        <!--
            Apache SOAP 2.3.1 - supplies the org.apache.soap.* packages used by the
            optional Apache SOAP provider and by util/jms/JMS2HTTPBridge.
            Optional/provided: the OSGi manifest already imports org.apache.soap.*
            with resolution:=optional, so consumers only need it when they actually
            select the Apache SOAP provider.
        -->
        <dependency>
            <groupId>soap</groupId>
            <artifactId>soap</artifactId>
            <version>2.3.1</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>

        <!-- JUnit for testing -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src</sourceDirectory>
        <resources>
            <resource>
                <directory>src</directory>
                <includes>
                    <include>**/*.properties</include>
                    <include>**/*.wsdd</include>
                    <include>**/META-INF/services/*</include>
                </includes>
            </resource>
        </resources>
        
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <excludes>
                        <!--
                            SoapRMI provider: depends on the soaprmi.* and xpp packages,
                            which ship only as lib/soaprmi-1_1.jar. SoapRMI is a defunct
                            project that was never published to Maven Central, so this
                            provider cannot be built from a resolvable dependency.
                            It is not registered in
                            META-INF/services/org.apache.wsif.spi.WSIFProvider and is
                            therefore unreachable at runtime.
                        -->
                        <exclude>**/providers/soap/soaprmi/**/*.java</exclude>
                    </excludes>
                    <release>21</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
            </plugin>

            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>5.1.9</version>
                <extensions>true</extensions>
                <configuration>
                    <instructions>
                        <_exportcontents>org.apache.wsif.*</_exportcontents>
                        <Import-Package>${osgi.imported.packages}</Import-Package>
                        <_nouses>true</_nouses>
                        <_noee>true</_noee>
                    </instructions>
                </configuration>
            </plugin>

            <!--
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Implementation-Title>WSIF</Implementation-Title>
                            <Implementation-Version>${project.version}</Implementation-Version>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            -->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.2</version>
                <configuration>
                    <source>21</source>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
